@@ -1,3 +1,7 @@
+2007-11-08  Robert Ancell  <robert.ancell@gmail.com>
+
+	* lib/main.py: If no game on startup start default game of human vs AI (Bug #446950)
+
 2007-11-02  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Show threatened squares and pieces able to be taken (Bug #471409)
